--- a/llog/llog.conf
+++ b/llog/llog.conf
@@ -2,5 +2,7 @@ my_call = HA5OGL
 my_QTH = Budapest
 my_QRA = JN97ML
 my_RIG = FT2900
-my_ANT = "J ant"
+my_ANT = J_ant
+my_PWR = 10W
+my_ALT = 100m
 
