--- a/llog/llog.conf
+++ b/llog/llog.conf
@@ -1,6 +1,6 @@
 my_call = HA5OGL
-my_QTH = Budapest
-my_QRA = JN97ML
+my_QTH = Budakalasz
+my_QRA = JN97MO
 my_RIG = FT2900
 my_ANT = Colinear
 my_ALT = 100m
