Try to install the script.
But it doesn't work. Better option would be to do it in the app.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,11 +43,10 @@ install (TARGETS ${PROJECT_NAME}
 				GROUP_EXECUTE GROUP_READ
 				WORLD_READ WORLD_EXECUTE)
 
-install (FILES hmd.conf
-			DESTINATION etc
-			COMPONENT config
-			RENAME hmd.conf_sample
-			PERMISSIONS OWNER_WRITE OWNER_READ
-				GROUP_READ
-				WORLD_READ)
-
+#install (FILES db/create.sh
+#			DESTINATION bin
+#			COMPONENT config
+#			RENAME llog_create
+#			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+#				GROUP_EXECUTE GROUP_READ
+#				WORLD_READ WORLD_EXECUTE)
