--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,27 @@
-INCLUDE(FindPkgConfig)
-cmake_minimum_required (VERSION 3.0)
-
+cmake_minimum_required (VERSION 3.13)
 project(llog)
+
+find_package(PkgConfig REQUIRED)
+
+#configure the compiler
+set(CMAKE_C_FLAGS "-Wall -Wextra -rdynamic -g -O0")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
+set(CMAKE_C_FLAGS_RELEASE "-O2")
+
+pkg_check_modules(SQLITE REQUIRED IMPORTED_TARGET sqlite3)
+pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk+-3.0)
+
+add_executable(${PROJECT_NAME} main.c conf.c db_sqlite.c getch.c main_window.c llog.c)
 
 
 #set up include directories
 include_directories("${PROJECT_BINARY_DIR}")
+include_directories(/usr/include/readline)
 
-#configure the compiler
-set(CMAKE_C_FLAGS "-Wall -Wextra")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_C_FLAGS_RELEASE "-O2")
-
-message("Host is: ${CMAKE_HOST_SYSTEM_NAME}")
-message("Kernel is: ${CMAKE_HOST_SYSTEM}")
-message("Configuring for build type: ${CMAKE_BUILD_TYPE}")
-
-
-message("Prefix is: ${CMAKE_INSTALL_PREFIX}")
-
-pkg_check_modules(EXTLIBS sqlite3)
-
-#this must be prior to 'add_executable'
-
-if (EXTLIBS_FOUND)
-  link_directories("${EXTLIBS_LIBRARY_DIRS}")
-endif ()
-
-add_executable(${PROJECT_NAME} main.c conf.c db_sqlite.c getch.c)
-
-target_link_libraries(${PROJECT_NAME} "readline")
-
-if (EXTLIBS_FOUND)
-  include_directories("${EXTLIBS_INCLUDEDIR}")
-  target_link_libraries(${PROJECT_NAME} ${EXTLIBS_LIBRARIES} "readline")
-endif ()
+target_link_libraries(${PROJECT_NAME} PUBLIC
+		readline
+        PkgConfig::SQLITE
+        PkgConfig::GTK)
 
 install (TARGETS ${PROJECT_NAME}
 			DESTINATION bin
