ax.25 config update.

--- a/config/direwolf.conf
+++ b/config/direwolf.conf
@@ -183,6 +183,9 @@ MODEM 300 900:1100
 #PTT COM1 RTS
 #PTT COM1 RTS -DTR
 #PTT /dev/ttyUSB0 RTS
+PTT RIG 134 /dev/ttyS0 19200
+
+TXDELAY 50
 
 #
 # On Linux, you can also use general purpose I/O pins if
