--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required (VERSION 3.13)
 project(llog)
 
+set(GLADE_FILE_NAME llog.glade)
+set(GLADE_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
+
+set(GLADE_FILE_PATH ${GLADE_FILE_DIR}/${GLADE_FILE_NAME})
+
+configure_file(llog_Config.h.in llog_Config.h)
+
 find_package(PkgConfig REQUIRED)
 
 #configure the compiler
@@ -16,10 +23,8 @@ add_executable(${PROJECT_NAME} main.c db_sqlite.c main_window.c llog.c)
 
 #set up include directories
 include_directories("${PROJECT_BINARY_DIR}")
-include_directories(/usr/include/readline)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
-		readline
         PkgConfig::SQLITE
         PkgConfig::GTK)
 
@@ -30,10 +35,8 @@ install (TARGETS ${PROJECT_NAME}
 				GROUP_EXECUTE GROUP_READ
 				WORLD_READ WORLD_EXECUTE)
 
-#install (FILES db/create.sh
-#			DESTINATION bin
-#			COMPONENT config
-#			RENAME llog_create
-#			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-#				GROUP_EXECUTE GROUP_READ
-#				WORLD_READ WORLD_EXECUTE)
+install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/llog.sql
+			DESTINATION ${GLADE_FILE_DIR}
+			COMPONENT config
+			PERMISSIONS OWNER_WRITE OWNER_READ
+				GROUP_READ WORLD_READ)
