--- a/llog/CMakeLists.txt
+++ b/llog/CMakeLists.txt
@@ -3,6 +3,8 @@ project(llog)
 
 set(GLADE_FILE_NAME llog.glade)
 set(GLADE_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
+set(DESKTOP_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/applications)
+set(ICONS_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/icons)
 
 set(GLADE_FILE_PATH ${GLADE_FILE_DIR}/${GLADE_FILE_NAME})
 
@@ -37,6 +39,18 @@ install (TARGETS ${PROJECT_NAME}
 
 install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/llog.sql
 			DESTINATION ${GLADE_FILE_DIR}
+			COMPONENT config
+			PERMISSIONS OWNER_WRITE OWNER_READ
+				GROUP_READ WORLD_READ)
+
+install (FILES gui/llog.desktop
+			DESTINATION ${DESKTOP_FILE_DIR}
+			COMPONENT config
+			PERMISSIONS OWNER_WRITE OWNER_READ
+				GROUP_READ WORLD_READ)
+
+install (FILES gui/llog.png
+			DESTINATION ${ICONS_FILE_DIR}
 			COMPONENT config
 			PERMISSIONS OWNER_WRITE OWNER_READ
 				GROUP_READ WORLD_READ)
