Install generation script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,13 @@ install (TARGETS ${PROJECT_NAME}
 				GROUP_EXECUTE GROUP_READ
 				WORLD_READ WORLD_EXECUTE)
 
+install (FILES db/create_llog.sh
+			DESTINATION bin
+			COMPONENT bin
+			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+				GROUP_EXECUTE GROUP_READ
+				WORLD_READ WORLD_EXECUTE)
+
 install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/llog.sql
 			DESTINATION ${GLADE_FILE_DIR}
 			COMPONENT config
