Station list is a dropdown

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required (VERSION 3.13)
 project(llog)
 
-set(GLADE_FILE_NAME llog.glade)
-set(GLADE_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
+set(SHARE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
 set(DESKTOP_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/applications)
 set(ICONS_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/icons)
 
-set(GLADE_FILE_PATH ${GLADE_FILE_DIR}/${GLADE_FILE_NAME})
+set(GLADE_FILE_NAME llog.glade)
+set(GLADE_FILE_PATH ${SHARE_DIR}/${GLADE_FILE_NAME})
+
+set(DB_FILE_NAME llog.sql)
+set(DB_FILE_PATH ${SHARE_DIR}/${DB_FILE_NAME})
 
 configure_file(llog_Config.h.in llog_Config.h)
 
@@ -36,30 +39,30 @@ install (TARGETS ${PROJECT_NAME}
 			DESTINATION bin
 			COMPONENT bin
 			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-				GROUP_EXECUTE GROUP_READ
-				WORLD_READ WORLD_EXECUTE)
+			GROUP_EXECUTE GROUP_READ
+			WORLD_READ WORLD_EXECUTE)
 
 install (FILES db/create_llog.sh
 			DESTINATION bin
 			COMPONENT bin
 			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-				GROUP_EXECUTE GROUP_READ
-				WORLD_READ WORLD_EXECUTE)
+			GROUP_EXECUTE GROUP_READ
+			WORLD_READ WORLD_EXECUTE)
 
-install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/llog.sql
-			DESTINATION ${GLADE_FILE_DIR}
+install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/${DB_FILE_NAME}
+			DESTINATION ${SHARE_DIR}
 			COMPONENT config
 			PERMISSIONS OWNER_WRITE OWNER_READ
-				GROUP_READ WORLD_READ)
+			GROUP_READ WORLD_READ)
 
 install (FILES gui/llog.desktop
 			DESTINATION ${DESKTOP_FILE_DIR}
 			COMPONENT config
 			PERMISSIONS OWNER_WRITE OWNER_READ
-				GROUP_READ WORLD_READ)
+			GROUP_READ WORLD_READ)
 
 install (FILES gui/llog.png
 			DESTINATION ${ICONS_FILE_DIR}
 			COMPONENT config
 			PERMISSIONS OWNER_WRITE OWNER_READ
-				GROUP_READ WORLD_READ)
+			GROUP_READ WORLD_READ)
