--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "llog.h": "c",
     "atomic": "c",
     "typeindex": "c",
-    "typeinfo": "c"
+    "typeinfo": "c",
+    "unistd.h": "c",
+    "position.h": "c",
+    "pthread.h": "c"
   }
 }
