--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ set(SHARE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
 set(DESKTOP_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/applications)
 set(ICONS_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/icons)
 
-set(GLADE_FILE_NAME llog.glade)
-set(GLADE_FILE_PATH ${SHARE_DIR}/${GLADE_FILE_NAME})
-
 set(DB_FILE_NAME llog.sql)
 set(DB_FILE_PATH ${SHARE_DIR}/${DB_FILE_NAME})
+
+set(SUMMITS_DB_FILE_NAME summitslist.sqlite)
+set(SUMMITS_DB_FILE_PATH ${SHARE_DIR}/${SUMMITS_DB_FILE_NAME})
 
 configure_file(llog_Config.h.in llog_Config.h)
 
@@ -23,6 +23,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O2")
 pkg_check_modules(SQLITE REQUIRED IMPORTED_TARGET sqlite3)
 pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk4)
 pkg_check_modules(GPS REQUIRED IMPORTED_TARGET libgps)
+find_library(MATH_LIBRARY m REQUIRED)
 
 add_executable(${PROJECT_NAME} main.c db_sqlite.c main_window.c llog.c conf.c
 																preferences_window.c position.c)
@@ -33,7 +34,8 @@ include_directories("${PROJECT_BINARY_DIR}")
 target_link_libraries(${PROJECT_NAME} PUBLIC
 				PkgConfig::SQLITE
 				PkgConfig::GTK
-				PkgConfig::GPS)
+				PkgConfig::GPS
+				${MATH_LIBRARY})
 
 install (TARGETS ${PROJECT_NAME}
 			DESTINATION bin
@@ -49,7 +51,7 @@ install (FILES db/create_llog.sh
 			GROUP_EXECUTE GROUP_READ
 			WORLD_READ WORLD_EXECUTE)
 
-install (FILES gui/${GLADE_FILE_NAME} gui/llog.png db/${DB_FILE_NAME}
+install (FILES gui/llog.png db/${DB_FILE_NAME} sota_db/${SUMMITS_DB_FILE_NAME}
 			DESTINATION ${SHARE_DIR}
 			COMPONENT config
 			PERMISSIONS OWNER_WRITE OWNER_READ
