--- a/llog_Config.h.in
+++ b/llog_Config.h.in
@@ -20,5 +20,5 @@
 
 /*Configuration for llog*/
 
-#define LLOG_GLADE "@GLADE_FILE_PATH@"
 #define LLOG_DB_PATH "@DB_FILE_PATH@"
+#define SUMMITS_DB_PATH "@SUMMITS_DB_FILE_PATH@"
