Sources moved to src directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,38 +18,7 @@ add_custom_command(
 
 add_custom_target(generate_summits_db ALL DEPENDS ${PROJECT_BINARY_DIR}/${SUMMITS_DB_FILE_NAME})
 
-configure_file(llog_Config.h.in llog_Config.h)
-
-find_package(PkgConfig REQUIRED)
-
-#configure the compiler
-set(CMAKE_C_FLAGS "-Wall -Wextra -rdynamic -g -O0")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_C_FLAGS_RELEASE "-O2")
-
-pkg_check_modules(SQLITE REQUIRED IMPORTED_TARGET sqlite3)
-pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk4)
-pkg_check_modules(GPS REQUIRED IMPORTED_TARGET libgps)
-find_library(MATH_LIBRARY m REQUIRED)
-
-add_executable(${PROJECT_NAME} main.c db_sqlite.c main_window.c llog.c conf.c
-																preferences_window.c position.c)
-
-#set up include directories
-include_directories("${PROJECT_BINARY_DIR}")
-
-target_link_libraries(${PROJECT_NAME} PUBLIC
-				PkgConfig::SQLITE
-				PkgConfig::GTK
-				PkgConfig::GPS
-				${MATH_LIBRARY})
-
-install (TARGETS ${PROJECT_NAME}
-			DESTINATION bin
-			COMPONENT bin
-			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-			GROUP_EXECUTE GROUP_READ
-			WORLD_READ WORLD_EXECUTE)
+add_subdirectory(src)
 
 install (FILES db/create_llog.sh
 			DESTINATION bin
